# Heightmap

./: CMakeLists.txt  main.cpp  quadtree.cpp  quadtree.h
data/: stair_real_rotated.pcd
heightmap/: CMakeLists.txt
heightmap/include/: Boundary.h  Heightmap.h  HeightmapNode.h  Node.h  Point2D.h  Point3D.h  QuadtreeNode.h  heightmap.h
heightmap/src/: Boundary.cpp  CMakeLists.txt  Heightmap.cpp  HeightmapNode.cpp  Node.cpp  Point2D.cpp  Point3D.cpp  QuadtreeNode.cpp  heightmap.cpp
